src/pages/Admin/Admin.scss
.admin{
    position: relative;

    &-title{
        font-size: 40px;
        font-weight: 700;
        text-align: center;
    }

    &-logo{
        margin: 20px 0;
        img{
            width: 100px;
        }
    }

    &-address,
    &-subtitle{
        font-size: 30px;
        font-weight: 500;
        margin-bottom: 20px;
        text-align: center;
    }

    &-address{
        color : #049745;
        font-size: 20px;
        text-align: center;
        font-weight: 700;
    }

    .total-token{
        font-weight: 700;
    }

    .loading{
        position: fixed;
        height: 100vh;
        width: 100vw;
        top: 0;
        left: 0;
        background-color: rgba(255, 255, 255, 0.624);
        display: flex;
        align-items: center;
        justify-content: center;

        img{
            width: 150px;
        }
    }
}

